--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 <div>Fakka</div>
 <div>Dit is een test</div>
 <h1>Dit is de test branch</h1>
+<p>p for main</p>
+
+<h1>mistake</h1>
+<h2>mistake2</h2>
